--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -10,3 +10,16 @@ resources:
       path: helcorin/jfrog-pipeline
       branches:
         include: main
+
+pipelines:
+  - name: pipeline_1
+    steps:
+      - name: step1
+        type: Bash
+        configuration:
+          inputResources:
+            - name: my_app_repo
+        execution:
+          onExecute:
+            # Data from input resources is available as env variables in the step
+            - echo "Initial test step"
